Updated build.gradle for create a valid manifest when creating jar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'java'
 }
 
 repositories {
@@ -36,6 +37,12 @@ application {
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+jar {
+    manifest {
+        attributes('Implementation-Title': 'ISII-WORKSHOP',
+                'Main-Class': 'ec.edu.espol.workshops.App')
+    }
 }
 /**
  * Cucumber runtime configuration
